# JiraReassign

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: copilot-instructions.md
examples/: mapping.csv
src/jtool/: cli.py  config.py  jira_client.py  term.py
src/jtool/cli/: base.py  main.py  remap.py
src/jtool/client/: __init__.py  base.py  confluence.py  jira.py
